fix chrome column gap

--- a/themes/default/css/app.css
+++ b/themes/default/css/app.css
@@ -4918,8 +4918,10 @@ header {
   .home-section .top {
     padding-top: 2rem; }
   .home-section .exhibit-columns {
+    column-count: 3;
+    column-gap: 0.05rem;
     -moz-column-count: 3;
-    -moz-column-gap: 0.05rem;
+    -moz-column-gap: 0.05rem !important;
     border-top: 1px solid #ffe0b2; }
   .home-section .card {
     border: none;
